--- a/code/美团实战/index.html
+++ b/code/美团实战/index.html
@@ -11,16 +11,43 @@
         <!-- 页面顶部start -->
         <div class="w1170 top">
             <ul class="fl">
-                <li><a href="#"></a></li>
+                <li><a href="#">收藏我们</a></li>
                 <li><a href="#">立即登录</a></li>
-                <li><a href="#"></a>注册</li>
+                <li><a href="#">注册</a></li>
             </ul>
             <ul class="fr">
+                <li><a href="#">我的订单</a></li>
                 <li><a href="#">我的美团</a></li>
-                <li><a href="#">手机app</a></li>
-                <li><a href="#">商家中心</a></li>
-                <li><a href="#">美团规则</a></li>
-                <li><a href="#">网站导航</a></li>
+                <li><a href="#">最近浏览</a></li>
+                <li><a href="#">联系客服</a></li>
+                <li><a href="#">我是商家</a></li>
+                <li><a href="#">代理商招募</a></li>
+                <li><a href="#">更多</a></li>
+                <div class="list">
+                    <ul>
+                        <li>申请退换货</li>
+                    </ul>
+                    <ul>
+                        <li>申请退换货</li>
+                    </ul>
+                    <ul>
+                        <li>申请退换货</li>
+                        <li>申请退换货</li>
+                        <li>申请退换货</li>
+                        <li>申请退换货</li>
+                        <li>申请退换货</li>
+                        <li>申请退换货</li>
+                    </ul>
+                    <ul>
+                        <li>申请退换货</li>
+                    </ul>
+                    <ul>
+                        <li>申请退换货</li>
+                    </ul>
+                    <ul>
+                        <li>申请退换货</li>
+                    </ul>
+                </div>
             </ul>
         </div>
          <!-- 页面顶部end -->
@@ -47,8 +74,37 @@
                      </button>
                      <input type="text" placeholder="请输入商家名称、地址等">  
                      <button>搜索</button>
-                     
+                     <div>
+                         <a href="#">虾吃虾涮</a>
+                         <a href="#">虾吃虾涮</a>
+                         <a href="#">虾吃虾涮</a>
+                         <a href="#">虾吃虾涮</a>
+                         <a href="#">虾吃虾涮</a>
+                         <a href="#">虾吃虾涮</a>
+                         <a href="#">虾吃虾涮</a>
+                         <a href="#">虾吃虾涮</a>
+                         <a href="#">虾吃虾涮</a>
+                     </div> 
                  </div>
+             </div>
+             <div class="tui fr">
+                 <ul>
+                     <li>
+                        <img src="" alt="">
+                        <a href=""></a>
+                        <p>随时退</p>
+                     </li>
+                     <li>
+                        <img src="" alt="">
+                        <a href=""></a>
+                        <p>不满意免单</p>
+                     </li>
+                     <li>
+                        <img src="" alt="">
+                        <a href=""></a>
+                        <p>过期退</p>
+                     </li>
+                 </ul>
              </div>
          </div>
          <!-- 页面logo end   -->
