--- a/code/JS高级/LX/JS复习.html
+++ b/code/JS高级/LX/JS复习.html
@@ -148,7 +148,7 @@ fn(1234);//参数是一个number值
 fn('hahha');
 fn(1234);
 </script> -->
-<script>
+<!-- <script>
     var a = 20;
     function foo() {
         if (!a) {
@@ -158,4 +158,17 @@ fn(1234);
         return a;
     }
     console.log(foo());
+</script> -->
+<!--====对比较运算符==的简单应用========= -->
+<script>
+    var undefined;
+    console.log(undefined==null)
+    console.log(1==true)
+    console.log(2==true)
+    console.log(0==false)
+    console.log(0=="")
+    console.log(NaN==NaN)
+    console.log([]==false)
+    console.log([]==![]);
+
 </script>
