--- a/code/JS高级/LX/JS复习.html
+++ b/code/JS高级/LX/JS复习.html
@@ -161,7 +161,7 @@ fn(1234);
 </script> -->
 <!--====对比较运算符==的简单应用========= -->
 <script>
-    var undefined;
+   /*  var undefined;
     console.log(undefined==null)
     console.log(1==true)
     console.log(2==true)
@@ -169,6 +169,11 @@ fn(1234);
     console.log(0=="")
     console.log(NaN==NaN)
     console.log([]==false)
-    console.log([]==![]);
-
+    console.log([]==![]); */
+    var foo="11"+3-"1"
+    console.log(foo)
+    var f1="11"+2-"2"
+    console.log(f1)
+    console.log(typeof "11")
+    console.log(typeof foo)
 </script>
